# smart_fixture

./: .replit  README.md  pyproject.toml  replit.md
.config/create-next-app-nodejs/: config.json
attached_assets/: Pasted-You-are-an-expert-full-stack-engineer-Build-for-me-a-complete-production-ready-Knockout-Tourna-1763893579863_1763893579864.txt
backend/: .env.example  .gitignore  README.md  requirements.txt  supabase_schema.sql
backend/app/: main.py  models.py
backend/app/routers/: clubs.py  events.py  fixtures.py  match_codes.py  players.py  results.py  scheduling.py
backend/app/utils/: database.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/clubs/: page.tsx
frontend/app/events/: page.tsx
frontend/app/fixtures/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/match/: page.tsx
frontend/app/players/: page.tsx
frontend/app/schedule/: page.tsx
frontend/lib/: api.ts
